[package]
name = "sapphire"
version = "0.1.0"
authors = ["cpsdqs <cpsdqs@gmail.com>"]
edition = "2018"

[dependencies]
fnv = "1.0"
lazy_static = "1.3"
parking_lot = "0.7"
sapphire-compiler = { path = "compiler" }
sapphire-compiler-macro = { path = "compiler-macro" }
smallvec = "0.6"

[workspace]
exclude = ['./cli']
